[package]
name = "minermonitor"
version = "0.1.0"
authors = ["jim"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.90"
url = "1.7.2"
reqwest = "0.9.13"
failure = "0.1.5"
failure_derive = "0.1.5"
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"]}
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve", "json"]
